--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-
 pyrogram==2.0.106
 TgCrypto==1.2.5
 python-dotenv==1.0.0
 nest_asyncio==1.6.0
+
+aiohttp==3.9.1           # Async HTTP client for OpenRouter API calls
+aiofiles==23.2.1         # Async file operations if needed for logging or caching
+motor==3.3.2             # Async MongoDB driver (in case not already included)
