--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ SUDO_USERS=123456789,987654321
 # Performance Configuration (Optional)
 MAX_CONCURRENT_OPERATIONS=10
 FLOOD_WAIT_THRESHOLD=30
+
+# OpenRouter API Configuration
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+CHATBOT_MODEL=deepseek/deepseek-r1:free
+
+# Chatbot Feature Toggle
+CHATBOT_ENABLED=True
